Update image extensions from PNG to JPG for better performance

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
                     <div class="project-image">
                         <div class="screenshot-container">
                             <div class="pc-screenshots">
-                                <img src="imgs/rent_screen.png" alt="Rental Agency Website PC Screenshot 1"
+                                <img src="imgs/rent_screen.jpg" alt="Rental Agency Website PC Screenshot 1"
                                     class="pc-screenshot" loading="lazy">
-                                <img src="imgs/rent_pc2.png" alt="Rental Agency Website PC Screenshot 2"
+                                <img src="imgs/rent_pc2.jpg" alt="Rental Agency Website PC Screenshot 2"
                                     class="pc-screenshot" loading="lazy">
                             </div>
-                            <img src="imgs/rent_mobile.png" alt="Rental Agency Website Mobile Screenshot"
+                            <img src="imgs/rent_mobile.jpg" alt="Rental Agency Website Mobile Screenshot"
                                 class="mobile-screenshot" loading="lazy">
                         </div>
                     </div>
@@ -127,12 +127,12 @@
                     <div class="project-image">
                         <div class="screenshot-container">
                             <div class="pc-screenshots">
-                                <img src="imgs/barber_screen.png" alt="Barbershop Website PC Screenshot 1"
+                                <img src="imgs/barber_screen.jpg" alt="Barbershop Website PC Screenshot 1"
                                     class="pc-screenshot" loading="lazy">
-                                <img src="imgs/barber_pc2.png" alt="Barbershop Website PC Screenshot 2"
+                                <img src="imgs/barber_pc2.jpg" alt="Barbershop Website PC Screenshot 2"
                                     class="pc-screenshot" loading="lazy">
                             </div>
-                            <img src="imgs/barber_mobile.png" alt="Barbershop Website Mobile Screenshot"
+                            <img src="imgs/barber_mobile.jpg" alt="Barbershop Website Mobile Screenshot"
                                 class="mobile-screenshot" loading="lazy">
                         </div>
                     </div>
@@ -168,12 +168,12 @@
                     <div class="project-image">
                         <div class="screenshot-container">
                             <div class="pc-screenshots">
-                                <img src="imgs/menu_screen.png" alt="Restaurant Menu Website PC Screenshot 1"
+                                <img src="imgs/menu_screen.jpg" alt="Restaurant Menu Website PC Screenshot 1"
                                     class="pc-screenshot" loading="lazy">
-                                <img src="imgs/menu_pc2.png" alt="Restaurant Menu Website PC Screenshot 2"
+                                <img src="imgs/menu_pc2.jpg" alt="Restaurant Menu Website PC Screenshot 2"
                                     class="pc-screenshot" loading="lazy">
                             </div>
-                            <img src="imgs/menu_mobile.png" alt="Restaurant Menu Website Mobile Screenshot"
+                            <img src="imgs/menu_mobile.jpg" alt="Restaurant Menu Website Mobile Screenshot"
                                 class="mobile-screenshot" loading="lazy">
                         </div>
                     </div>
