changed price tag

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="pricing-grid">
                 <div class="pricing-card">
                     <h3>Basic Website</h3>
-                    <div class="price">$500</div>
+                    <div class="price">€500</div>
                     <ul>
                         <li>5-7 pages</li>
                         <li>Mobile-optimized</li>
@@ -226,7 +226,7 @@
                 </div>
                 <div class="pricing-card featured">
                     <h3>E-commerce</h3>
-                    <div class="price">$800</div>
+                    <div class="price">€800</div>
                     <ul>
                         <li>Online store</li>
                         <li>Payment integration</li>
@@ -259,7 +259,7 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2 class="section-title">Ready to Upgrade Your Business?</h2>
-            <p class="section-subtitle">Get a professional website within a week. Starting at $500 (50% upfront)</p>
+            <p class="section-subtitle">Get a professional website within a week. Starting at €500 (50% upfront)</p>
 
             <div class="contact-content">
                 <div class="contact-info">
